fix: icons on mobile

--- a/ui/src/app/dashboard/site-card-xs/site-card-xs.component.scss
+++ b/ui/src/app/dashboard/site-card-xs/site-card-xs.component.scss
@@ -28,4 +28,5 @@ p.small {
 .site-image {
     height: 24px;
     width: 24px;
+    margin: 0;
 }
